# SignalDesk-ai

./: .dockerignore  .eslintrc.cjs  .gitignore  .prettierignore  README.md  package.json  tsconfig.base.json
apps/ai-planner/: Dockerfile  README.md
apps/ai-planner/app/: main.py  planner_core.py
apps/ai-planner/tests/: test_planner_core.py
apps/api/: Dockerfile  package.json  tsconfig.json
apps/api/src/: server.ts  smoke.test.ts
apps/web/: .eslintrc.cjs  Dockerfile  package.json  tailwind.config.cjs  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/lib/: agentRunUtils.ts  utils.ts
apps/worker/: Dockerfile  package.json
apps/worker/src/: index.ts  smoke.test.ts  worker.test.ts  worker.ts
docs/: app-explainer.md  architecture.md  demo.md  overview.md  plan.md  risks.md  runbook.md  simulation.md  slo.md
infra/: .env.example  docker-compose.isolated.yml  docker-compose.yml
legacy/agent-orchestrator/: .gitignore  CONTRIBUTING.md  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
legacy/guardrails/: README.md
legacy/guardrails/backend/: README.md  pyproject.toml
legacy/guardrails/backend/src/sentinel/: __init__.py  cli.py  costs.py  eval_engine.py  guardrails.py  mock_agent.py  prompt_registry.py  types.py
legacy/guardrails/backend/tests/: test_costs.py  test_eval_engine.py  test_guardrails.py  test_mock_agent.py  test_registry.py
legacy/ingest-gateway/: .gitignore  Dockerfile  README.md  docker-compose.yml  package.json  tsconfig.json
legacy/ops-guard/: .gitignore
scripts/: run-simulation.ts  seed.ts
(+158 files in other folders)
